tests/baselines/reference/computedPropertyNames16_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames16_ES5.ts(10,16): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames16_ES5.ts (1 errors) ====
    var s: string;
    var n: number;
    var a: any;
    class C {
        get [s]() { return 0;}
        set [n](v) { }
        static get [s + s]() { return 0; }
        set [s + n](v) { }
        get [+s]() { return 0; }
        static set [""](v) { }
                   ~~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
        get [0]() { return 0; }
        set [a](v) { }
        static get [<any>true]() { return 0; }
        set [`hello bye`](v) { }
        get [`hello ${a} bye`]() { return 0; }
    }